test/syntax-errors/strict-cast.bb
Strict

Local name = Int( "kevin" ) ; valid

Local name = "kevin" ; invalid
